manifests/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: url-shortener
  labels:
    app: url-shortener
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: url-shortener
      name: redis-pod
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        storageClassName: standard
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  template:
    metadata: 
      labels:
        name: redis-pod
        app: url-shortener
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 6379
        volumeMounts:
          - mountPath: "/data"
            name: redis-data
        args: ["--requirepass", "$(REDIS_PASSWORD)", "--appendonly", "yes"]
