manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: url-shortener
  labels:
    app: url-shortener
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: url-shortener
      name: redis-pod
  template:
    metadata: 
      labels:
        name: redis-pod
        app: url-shortener
    spec:
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
      containers:
      - name: redis
        image: redis:7-alpine
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 6379
        volumeMounts:
          - mountPath: "/data"
            name: redis-storage
        args: ["--requirepass", "$(REDIS_PASSWORD)", "--appendonly", "yes"]
