manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: url-shortener
  labels: 
    app: url-shortener
spec:
  type: ClusterIP
  selector:
    app: url-shortener
    name: redis-pod
  ports:
  - port: 6379
    targetPort: 6379
