manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: url-shortener
  labels:
    app: url-shortener
spec:
  rules:
    - host: url-shortener.local
      http: 
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: url-shortener-app-service
                port:
                  number: 8001
